# sell-pipelines

./: .gitignore  CLAUDE.md  README.md  RUN.md  SETUP.md  SKILL.md  data.duckdb  docker-compose.yml  lazada_auth.py  lazada_pipeline.py  main.py  pyproject.toml  redmart_auth.py  redmart_pipeline.py  shopee_auth.py  shopee_pipeline.py  test.py  test2.py  test_shopee_products.py
lazadaclient/: __init__.py  auth.py  client.py  signature.py
sellpipelines/: __init__.py  assets.py  checks.py  definitions.py  jobs.py  sources.py  token_manager.py  transformers.py
shopeeclient/: __init__.py  auth.py  client.py
